--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Gudea', sans-serif;
+  // font-family: 'Spartan', sans-serif;
 }
 
 .App {
