--- a/src/SCSS/Body.scss
+++ b/src/SCSS/Body.scss
@@ -2,7 +2,7 @@
 
 .body-container {
     border: 1px solid green;
-    height: 100%;
+    height: 100vh;
     background: transparent;
     display: flex;
     justify-content: center;
