--- a/src/SCSS/Skills.scss
+++ b/src/SCSS/Skills.scss
@@ -48,7 +48,7 @@
         
         .react-icon {
             background: transparent;
-            color: white;
+            // color: white;
             color: black;
             &:hover {
                 animation: hoverAnimation;
