--- a/src/SCSS/Title.scss
+++ b/src/SCSS/Title.scss
@@ -1,6 +1,7 @@
 @import './Variables.scss';
 
 .title-container {
+    border: 1px solid black;
     height: 100%;
     width: 100%;
     display: flex;
@@ -13,6 +14,10 @@
     padding: 10vh 5vh 5vh 5vh;
     h1 {
         font-family: 'Spartan', sans-serif;
+        // background: linear-gradient($purpleShadow1, $otherBlue);
+        background: linear-gradient(rgb(143, 27, 27), yellow);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
     }
     h2 {
         font-family: 'Spartan', sans-serif;
