added contact page and about page.

--- a/src/SCSS/Variables.scss
+++ b/src/SCSS/Variables.scss
@@ -37,7 +37,9 @@ $softGold2: #d1bfa7cc;
 $softGold3: #d1bfa778;
 $silver: #8e8e90;
 $silver2: #8e8e90d2;
-$silver3: #8e8e9044;
+// $silver3: #8e8e9044;
+// $silver3: #8e8e90;
+$silver3: #cfcccc;
 $onyx: #49494b;
 $onyx2: #49494bc5;
 $onyx3: #49494b44;
