added initials icon with link to title page, and re-added title page.

--- a/src/SCSS/Contact.scss
+++ b/src/SCSS/Contact.scss
@@ -43,6 +43,9 @@
         align-items: center;
         display: flex;
         justify-content: space-evenly;
+        span {
+            margin-right: 10px;
+        }
     }
 }
 
