--- a/src/SCSS/Header.scss
+++ b/src/SCSS/Header.scss
@@ -9,11 +9,19 @@
     z-index: 1;
     font-size: 7vh;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     padding: 8px;
     background: $header;
     box-shadow: 0px 0px 10px 1px $purpleShadow1;
+}
+
+.header-initials {
+    height: 18px;
+    width: 18px;
+    background: url('../img/initials/signature-initials.png');
+    background-size: 100%;
+    background-position: center;
 }
 
 .menu-icon {
@@ -57,8 +65,18 @@
         // border-radius: 5%;
     }
 }
+@media only screen and (min-width: 360px) {
+    .header-initials {
+        height: 25px;
+        width: 25px;
+    }
+}
 
 @media only screen and (min-width: 768px) {
+    .header-initials {
+        height: 50px;
+        width: 50px;
+    }
     .header-container {
         height: 7vh;
     }
@@ -151,3 +169,4 @@
         height: 6%;
     }
 }
+
