--- a/src/SCSS/Project.scss
+++ b/src/SCSS/Project.scss
@@ -119,7 +119,8 @@
     padding: .5vh;
     background: transparent;
     margin: 10px 0;
-    max-height: 28vh;
+    // max-height: 28vh;
+    max-height: 20vh;
     overflow: auto;
 }
 
@@ -206,6 +207,9 @@
         margin-left: 2%;
         margin-right: 2%;
         min-height: 89vh;
+    }
+    .project-description {
+        max-height: 28vh;
     }
 }
 
