added light/dark mode button (commented). still need to add conditional styling.

--- a/src/SCSS/Header.scss
+++ b/src/SCSS/Header.scss
@@ -24,6 +24,41 @@
     background-position: center;
 }
 
+.mode-container-web {
+    height: 50px;
+    width: 50px;
+    // border: 1px solid black;
+    border-radius: 50%;
+    display: none;
+    overflow: hidden;
+    div {
+        height: 100%;
+        width: 100%;
+    }
+}
+
+.mode-container-mobile {
+    height: 18px;
+    width: 18px;
+    // border: 1px solid black;
+    border-radius: 50%;
+    div {
+        height: 100%;
+        width: 100%;
+    }
+}
+
+.lightMode-image {
+    background-image: url('../img/lightDarkMode/lightMode.png');
+    background-size: 110%; 
+    background-position: center;
+}
+.darkMode-image {
+    background-image: url('../img/lightDarkMode/darkMode.png');
+    background-size: 90%; 
+    background-position: center;
+}
+
 .menu-icon {
     color: $offWhite;
     font-size: 4.5vh;
@@ -65,6 +100,7 @@
         // border-radius: 5%;
     }
 }
+
 @media only screen and (min-width: 360px) {
     .header-initials {
         height: 25px;
@@ -77,8 +113,15 @@
         height: 50px;
         width: 50px;
     }
+    .mode-container-web {
+        display: flex;
+    }
+    .mode-container-mobile {
+        display: none;
+    }
     .header-container {
         height: 7vh;
+        padding: 8px 30px;
     }
 
     .mobile-menu  {
