added light/dark conditional styling for title page and header. Added custom SVG animation for title page. Changed color scheme.

--- a/src/SCSS/Header.scss
+++ b/src/SCSS/Header.scss
@@ -16,10 +16,18 @@
     box-shadow: 0px 0px 10px 1px $purpleShadow1;
 }
 
-.header-initials {
+.header-initials-true {
     height: 18px;
     width: 18px;
     background: url('../img/initials/signature-initials.png');
+    background-size: 100%;
+    background-position: center;
+}
+
+.header-initials-false {
+    height: 18px;
+    width: 18px;
+    background: url('../img/initials/signature-initials-inverted.png');
     background-size: 100%;
     background-position: center;
 }
@@ -102,14 +110,22 @@
 }
 
 @media only screen and (min-width: 360px) {
-    .header-initials {
+    .header-initials-true {
+        height: 25px;
+        width: 25px;
+    }
+    .header-initials-false {
         height: 25px;
         width: 25px;
     }
 }
 
 @media only screen and (min-width: 768px) {
-    .header-initials {
+    .header-initials-true {
+        height: 50px;
+        width: 50px;
+    }
+    .header-initials-false {
         height: 50px;
         width: 50px;
     }
