--- a/src/SCSS/Variables.scss
+++ b/src/SCSS/Variables.scss
@@ -5,6 +5,12 @@ $lightBlueBackdrop: #76c1d4;
 $offWhite: #eeeeee;
 $sandTan: #e1b382;
 $sandTanShadow: #c89666;
+$ad: 2000;
+$comp1: black;
+$comp2: white;
+$shirt1: rgb(49, 0, 71);
+$shirt2: rgb(202, 206, 156);
+$head: rgb(20, 20, 20);
 
 
 $greyBlueLeaf1: #4f5f76;
