--- a/src/SCSS/Header.scss
+++ b/src/SCSS/Header.scss
@@ -22,6 +22,7 @@
     background: url('../img/initials/signature-initials.png');
     background-size: 100%;
     background-position: center;
+    background-repeat: no-repeat;
 }
 
 .header-initials-false {
