--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import './SCSS/Variables.scss';
 
 * {
+  background-repeat: no-repeat;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -11,6 +12,6 @@
 .App {
   text-align: center;
   min-height: 100vh;
-  width: 100vw;
+  width: 100%; // Don't put vw. Adds scroll bar.
   background: $background;
 }
