--- a/src/SCSS/Contact.scss
+++ b/src/SCSS/Contact.scss
@@ -2,6 +2,7 @@
 
 .contact-container {
     height: 100vh;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,12 +14,12 @@
 
 .github-container {
     // border: 1px solid black;
-    width: 340px;
+    width: 320px;
     height: 40px;
     margin-bottom: 25px;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     .github-info {
         font-size: 22px;
         align-items: center;
@@ -33,22 +34,37 @@
 
 .email-container {
     // border: 1px solid black;
-    width: 340px;
+    width: 320px;
     height: 40px;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     .email-info {
         font-size: 22px;
         align-items: center;
         display: flex;
         justify-content: space-evenly;
-        span {
-            margin-right: 10px;
-        }
     }
 }
 
 .email-icon {
     margin: 0 1vh;
+}
+
+@media only screen and (min-width: 768px) {
+    .github-container {
+        width: 340px;
+        height: 40px;
+        justify-content: flex-start;
+    }
+    .email-container {
+        width: 340px;
+        height: 40px;
+        justify-content: flex-start;
+        .email-info {
+            span {
+                margin-right: 10px;
+            }
+        }
+    }
 }
