--- a/src/SCSS/Portfolio.scss
+++ b/src/SCSS/Portfolio.scss
@@ -7,16 +7,19 @@
     align-items: center;
     flex-direction: column;
     padding-top: 7vh;
+    max-width: 100%;
+    box-sizing: border-box;
 }
 
 @media only screen and (min-width: 768px) {
   .portfolio-container {
       width: 100%;
+      max-width: 100%;
       display: grid;
       align-items: center;
       grid-template-columns: repeat(2, 1fr);
       padding: 0;
-      margin: 0 auto;
+    //   margin: 0 auto;
       padding-top: 9vh;
   }
 }
