--- a/src/SCSS/Project.scss
+++ b/src/SCSS/Project.scss
@@ -5,6 +5,7 @@
     width: 96%;
     // border: 1px solid black;
     background: $project;
+    // background: rgb(37, 37, 37);
     padding: .7vh;
     margin-bottom: 5vh;
     position: relative;
